	* metadata.c (mono_metadata_load_generic_params): Fill mono_generic_params_with_ambiguous_names
	as necessary.

2006-01-25  Raja R Harinath  <rharinath@novell.com>

	* metadata.c (mono_type_create_from_typespec_full): Fix caching of types.

Tue Jan 24 18:53:35 CET 2006 Paolo Molaro <lupus@ximian.com>

	* profiler.c: fix printing of data.

Tue Jan 24 09:56:16 CET 2006 Paolo Molaro <lupus@ximian.com>

	* object.c: fix deadlock related to string interning.

2006-01-23  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h (MonoDebuggerIOLayer): Removed.

	* mono-debug-debugger.c (mono_debugger_io_layer): Removed.

2006-01-23  Martin Baulig  <martin@ximian.com>

	* mono-debug.h: Moved the prototypes of some functions which are
	used by the JIT here from mono-debug-debugger.h.

2006-01-21  Martin Baulig  <martin@ximian.com>

	* Makefile.am: Don't install mono-debug-debugger.h.

2006-01-21  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h: Enforce the private status of this header
	file and removed unneccessary #include's in metadata/*.c and mini/*.c.
	Moved some stuff from mono-debugger-jit-wrapper.h here.

2006-01-19  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (emit_struct_conv): Relax the fields with same offset
	check even more. Fixes #77230.

2006-01-18  Martin Baulig  <martin@ximian.com>

	* loader.c (find_method_in_class): Added `gboolean is_inflated'
	argument; if false, we compare the uninstantiated signatures.
	(method_from_memberref): Compare the uninstantiated signatures;
	fixes #76417.

2006-01-18  Zoltan Varga  <vargaz@gmail.com>

	* metadata.c (mono_metadata_signature_dup): Applied patch from
	Aras Pranckevicius (aras@otee.dk). Fix crash when compiled with MSVC.
	Fixes #77288.

2006-01-17  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (emit_struct_conv): Allow fields with the same offset when
	marshalling from native to managed code. Fixes #77230.

2006-01-17 Gonzalo Paniagua Javier <gonzalo@ximian.com>
