@@ -485,9 +485,9 @@ mono_string_to_lpstr (MonoString *s)
 
 	tmp = g_utf16_to_utf8 (mono_string_chars (s), s->length, NULL, &len, &error);
 	if (error) {
-		g_warning (error->message);
+		MonoException *exc = mono_get_exception_argument ("string", error->message);
 		g_error_free (error);
-		return NULL;
+		mono_raise_exception(exc);
 	}
 	else {
 		as = CoTaskMemAlloc (len + 1);
